--- a/styels/blog.css
+++ b/styels/blog.css
@@ -1,4 +1,9 @@
 div{
     background-color: tomato;
     padding: 20px;
+    margin: 20px; 
+    border-bottom:20px;
+    border-radius:5px;
+    
+
 }
